
name:                smaccm-params
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10


library
  exposed-modules:     SMACCMPilot.Param,
                       SMACCMPilot.Param.Base,
                       SMACCMPilot.Param.Tower,
                       SMACCMPilot.Param.TowerTypes
  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       tower

  default-language:    Haskell2010
  ghc-options:         -Wall

