name:                smaccm-shared-comm
version:             0.1
license:             BSD3
author:              Galois, Inc.
maintainer:          leepike@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:   SMACCMPilot.Communications

  build-depends:     base >= 4.6,
                     ivory

  default-language:  Haskell2010
  ghc-options:       -Wall
