name:                smaccm-shared-comm
version:             0.1
license:             BSD3
author:              Galois, Inc.
maintainer:          leepike@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  exposed-modules:   SMACCMPilot.Communications

  build-depends:     base >= 4.6,
                     ivory

  default-language:  Haskell2010
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
