
name:                smaccm-commsec
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     SMACCMPilot.Commsec
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-artifact,
                       smaccm-shared-comm
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

