
name:                smaccm-commsec
version:             0.1.0.0
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >= 1.10

data-files: support/aes.h,
            support/aescrypt.c,
            support/aeskey.c,
            support/aestab.c,
            support/aestab.h,
            support/brg_endian.h,
            support/brg_types.h,
            support/commsec.c,
            support/commsec.h,
            support/gcm.c,
            support/gcm.h,
            support/gf128mul.c,
            support/gf128mul.h,
            support/gf_convert.c,
            support/gf_mul_lo.h,
            support/mode_hdr.h

library
  exposed-modules:     SMACCMPilot.Commsec,
                       SMACCMPilot.Commsec.Artifacts,
                       SMACCMPilot.Commsec.Config,
                       SMACCMPilot.Commsec.Commsec,
                       Paths_smaccm_commsec
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-artifact,
                       tower-config,
                       smaccm-shared-comm
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

