name:                commsec-test
version:             0.1.0.0
synopsis:            Ivory test of the commsec library.
-- description:
homepage:            smaccmpilot.org
license:             BSD3
author:              Thomas DuBuission
maintainer:          Lee Pike
copyright:           Galois, Inc.
category:            Network
build-type:          Simple
cabal-version:       >=1.8

flag werror
  default:              False
  description:          Pass -Werror to GHC.

-- Generates Ivory C files.
executable commsec-test
  main-is:             Main.hs
  build-depends:       base,
                       ivory,
                       ivory-backend-c,
                       ivory-stdlib
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
