
name:                hxstream
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:      Data.HXStream,
                        Data.HXStream.Test

  build-depends:        base >= 4.6,
                        bytestring,
                        QuickCheck

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans

executable hxstream-serial-test

  main-is:              Main.hs
  hs-source-dirs:       serial-test

  build-depends:        base >= 4.6,
                        bytestring,
                        serialport,
                        hxstream

