
name:                ivory-hx-stream
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:      Ivory.HXStream,
                        Ivory.HXStream.Test

  build-depends:        base >= 4.6,
                        ivory

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans

executable ivory-hxstream-test

  main-is:              Main.hs
  hs-source-dirs:       test

  build-depends:        base >= 4.6,
                        ivory,
                        ivory-backend-c,
                        ivory-opts,
                        ivory-tower,
                        ivory-tower-freertos

