
name:                ivory-hxstream
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:      Ivory.HXStream,
                        Ivory.HXStream.Types,
                        Ivory.HXStream.Test
  build-depends:        base >= 4.6,
                        ivory,
                        ivory-stdlib,
                        ivory-backend-c,
                        shared-smaccmpilot,
                        directory,
                        QuickCheck
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans

executable ivory-hxstream-test
  main-is:              Main.hs
  build-depends:        base >= 4.6,
                        ivory-hxstream,
                        ivory,
                        ivory-backend-c,
                        ivory-opts,
                        ivory-tower,
                        ivory-tower-freertos,
                        directory,
                        shared-smaccmpilot,
                        QuickCheck
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
