
name:                ivory-hxstream
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  hs-source-dirs:       src
  exposed-modules:      Ivory.HXStream,
                        Ivory.HXStream.Types,
                        Ivory.HXStream.Test
  build-depends:        base >= 4.6,
                        ivory,
                        ivory-stdlib,
                        ivory-backend-c,
                        ivory-quickcheck,
                        directory,
                        QuickCheck
  default-language:     Haskell2010
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall

executable ivory-hxstream-test
  main-is:              Main.hs
  build-depends:        base >= 4.6,
                        ivory-hxstream,
                        ivory,
                        ivory-backend-c,
                        ivory-opts,
                        tower          >= 0.8,
                        tower-frontend >= 0.8,
                        directory,
                        ivory-quickcheck,
                        QuickCheck
  default-language:     Haskell2010
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
