
name:                ivory-hxstream
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:      Ivory.HXStream,
                        Ivory.HXStream.Types
  build-depends:        base >= 4.6,
                        ivory,
                        ivory-stdlib
  default-language:     Haskell2010
  ghc-options:          -Wall

-- FIXME: needs to be translated to use new quickcheck library
--executable ivory-hxstream-test
--  main-is:              Main.hs
--  hs-source-dirs:       tests
--  build-depends:        base >= 4.6,
--                        ivory-hxstream,
--                        ivory,
--                        ivory-stdlib,
--                        ivory-artifact,
--                        ivory-backend-c,
--                        ivory-opts,
--                        ivory-quickcheck,
--                        QuickCheck
--  default-language:     Haskell2010
--  ghc-options:          -Wall
